[gd_scene load_steps=44 format=2]

[ext_resource path="res://Player/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/Assets/Little witch/69x56/Sprite sheet/IdleAnimation.png" type="Texture" id=2]
[ext_resource path="res://Player/Assets/Little witch/69x56/Sprite sheet/RunAnimation.png" type="Texture" id=3]
[ext_resource path="res://Player/Assets/Little witch/69x56/Sprite sheet/JumpAnimation.png" type="Texture" id=4]
[ext_resource path="res://Player/Assets/Little witch/85x56/Sprite sheet/AttackAnimation.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.30136, 3.91686 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 10.4933
height = 27.4297

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.6824
height = 26.6705

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=5]
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=6]
length = 0.15
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=8]
length = 0.12
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DirectionNode/BasicAttackHitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, false ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionNode/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionNode/Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DirectionNode/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "falling"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "jump_start"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "jump_to_fall"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "jumping"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "landing"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "punch"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachine" id=37]
states/falling/node = SubResource( 12 )
states/falling/position = Vector2( 633, 332 )
states/idle/node = SubResource( 13 )
states/idle/position = Vector2( 223, -43 )
states/jump_start/node = SubResource( 14 )
states/jump_start/position = Vector2( 974, -117 )
states/jump_to_fall/node = SubResource( 15 )
states/jump_to_fall/position = Vector2( 996, 281 )
states/jumping/node = SubResource( 16 )
states/jumping/position = Vector2( 974, 83 )
states/landing/node = SubResource( 17 )
states/landing/position = Vector2( 633, 511 )
states/punch/node = SubResource( 18 )
states/punch/position = Vector2( 481, -3.05948 )
states/run/node = SubResource( 19 )
states/run/position = Vector2( 223, 270 )
transitions = [ "idle", "run", SubResource( 20 ), "run", "idle", SubResource( 21 ), "idle", "jump_start", SubResource( 22 ), "run", "jump_start", SubResource( 23 ), "jump_start", "jumping", SubResource( 24 ), "jumping", "jump_to_fall", SubResource( 25 ), "jump_to_fall", "falling", SubResource( 26 ), "falling", "landing", SubResource( 27 ), "landing", "run", SubResource( 28 ), "landing", "idle", SubResource( 29 ), "idle", "falling", SubResource( 30 ), "run", "falling", SubResource( 31 ), "falling", "jump_start", SubResource( 32 ), "idle", "punch", SubResource( 33 ), "run", "punch", SubResource( 34 ), "punch", "idle", SubResource( 35 ), "punch", "run", SubResource( 36 ) ]
start_node = "idle"
graph_offset = Vector2( 61, -86.1804 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=38]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="DirectionNode" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="DirectionNode"]
position = Vector2( 0.851959, -1.49831 )
texture = ExtResource( 5 )
hframes = 10
frame = 5

[node name="PotionSpawn" type="Position2D" parent="DirectionNode"]

[node name="NameNode" type="Node2D" parent="DirectionNode"]

[node name="NameLabel" type="Label" parent="DirectionNode/NameNode"]
margin_left = -29.3811
margin_top = -54.0157
margin_right = 27.6189
margin_bottom = -36.0157
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicAttackHitBox" type="Area2D" parent="DirectionNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionNode/BasicAttackHitBox"]
position = Vector2( 26.0678, 7.56808 )
scale = Vector2( 11.6173, 1.94044 )
shape = SubResource( 1 )
disabled = true

[node name="HitBox" type="Area2D" parent="DirectionNode"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionNode/HitBox"]
position = Vector2( 0, 4.20448 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4.29756 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/falling = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/jump_start = SubResource( 6 )
anims/jump_to_fall = SubResource( 7 )
anims/jumping = SubResource( 8 )
anims/landing = SubResource( 9 )
anims/punch = SubResource( 10 )
anims/run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 37 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 38 )

[node name="DirecitonTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="DirectionNode/BasicAttackHitBox" to="." method="_on_BasicAttackHitBox_area_entered"]
[connection signal="area_entered" from="DirectionNode/HitBox" to="." method="_on_HitBox_area_entered"]
